<resources>
    <string name="app_name"><b>Il mio orto</b>
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="communicate">Communicate</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="search">search</string>
    <string name="image_of_the_product">image_of_the_product</string>
    <string name="product_name">product_name</string>
    <string name="product_price">product_price</string>
    <string name="product_description">product_description</string>
    <string name="add_new_product">add_new_product</string>
    <string name="product_title">product_title</string>
    <string name="take_gps_position">take_gps_position</string>
    <string name="price">price</string>
    <string name="description">description</string>
    <string name="take_a_picture">take_a_picture</string>
    <string name="image_captured">image_captured</string>
    <string name="product_position">product_position</string>
    <string name="home">home</string>
    <string name="position">position</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string-array name="rangeSlider">
        <item>20</item>
        <item>70</item>
    </string-array>
</resources>