<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:background="@color/purple_500"
                app:srcCompat="@drawable/ic_baseline_android_24"
                android:layout_margin="10dp"
                android:contentDescription="@string/image_of_the_product" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"/>

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_margin="10dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"/>
            <TextView
                android:id="@+id/product_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:layout_margin="10dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"/>

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>