<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/single_card"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/material_on_surface_stroke"
    android:theme="@style/Theme.MaterialComponents.Light">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="108dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="5dp"
            android:elevation="10dp">
        <ImageView
            android:id="@+id/product_imageview"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:background="@color/Transparent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/image_of_the_product"
            android:src="@drawable/verdura"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/product_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"

            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/product_price_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

        <TextView
            android:id="@+id/product_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>
        <TextView
            android:id="@+id/product_position_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/product_position"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>