<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cream">

    <include layout="@layout/fab_add" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.77" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_position_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name_textinput"
                android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/product_position"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textNoSuggestions"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_name_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/product_name"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textNoSuggestions"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/gps_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="103dp"
                android:backgroundTint="@color/cream"
                android:background="@color/black"
                android:contentDescription="@string/take_gps_position"
                android:minHeight="48dp"
                app:layout_constraintStart_toEndOf="@+id/product_position_textinput"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_gps_fixed_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_position_textinput"
                android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:hint="price"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/capture_button"
                style="@style/ThemeOverlay.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="99dp"
                android:layout_marginTop="22dp"
                android:text="@string/take_a_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_textinput" />

            <ImageView
                android:id="@+id/picture_displayed_imageview"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="17dp"
                android:background="@color/purple_500"
                android:contentDescription="@string/image_captured"
                android:src="@drawable/ic_baseline_android_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/capture_button" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_textinput"
                android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:hint="@string/description"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>